# mae

./: .env  .gitignore  Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs
migrations/: 20250711220000_create_status_enum.sql  20250711231746_create_table_function.sql  20250711231845_create_repo_example_table.sql
repo_macro/: Cargo.toml
repo_macro/src/: lib.rs
run_app_macro/: Cargo.toml
run_app_macro/src/: lib.rs
scripts/: init_db.sh  init_redis.sh
src/: error_response.rs  lib.rs  main.rs  repo.rs  request_context.rs  routes.rs  session.rs  telemetry.rs  test_domain.rs
src/app/: app.rs  build.rs  configuration.rs  mod.rs  run.rs
src/application/: configuration.rs
src/middleware/: get_context.rs  get_session.rs  mod.rs
src/repo/: mod.rs  select_update_builder.rs
tests/: repo.rs
tests/mae/: build.rs  main.rs  repo.rs
