[package]
name = "mae"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Mae is used to standardize and streamline the creation of micro-services."
homepage = "https://statbook.io"
readme = "./README.md"
repository = "https://github.com/MrCartaaa/mae"

[dependencies]
mae-repo_macro = {path = "./repo_macro"}
mae-run_app_macro = {path = "./run_app_macro"}
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-async-std",] }
serde = { version = "1.0.219", features = ["derive"] }
num = "0.4.3"
anyhow = "1.0.98"
serde-aux = "4.7.0"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.15.13"
actix-web = "4.11.0"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "registry"] }

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
